--- a/InTheBoks.Web/packages.config
+++ b/InTheBoks.Web/packages.config
@@ -16,11 +16,11 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.0.0-rc2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
@@ -32,7 +32,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
