--- a/InTheBoks.Web/packages.config
+++ b/InTheBoks.Web/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
